# Deeplearn-week5-webpage

./: .gitignore
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py  models.py
backend/app/routers/: auth.py  content.py  payment.py
backend/app/services/: auth_service.py  content_service.py  payment_service.py
backend/content/week5/: augment.md  cnn.md  overfit.md  reg.md  sections.json  transfer.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx  MarkdownRenderer.jsx  Navbar.jsx  PaywallModal.jsx  SectionCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: usePurchase.js
frontend/src/pages/: CheckoutSuccess.jsx  Dashboard.jsx  Landing.jsx  Login.jsx  LoginCallback.jsx  SectionDetail.jsx  Week5Index.jsx
